src/styles/charte.scss
/* ... */
/* ---------------------------------------------------
  OPTION BOX
----------------------------------------------------- */

.option-box {
  width: 100%;
  height: var(--height-big);
  border: 0.0938rem solid var(--border-gray);
  border-right: 0rem;
  outline: none;
  border-radius: var(--radius-base);
  font-size: 0.9375rem;
  font-weight: 500;
  color: var(--light-black);
  box-shadow: var(--shadow-small);
  background-color: var(--white);
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: all 0.2s ease-in-out;

  &:active {
    transform: scale(0.96);
    -webkit-transform: scale(0.96);
    -moz-transform: scale(0.96);
    border: 0.0938rem solid var(--border-gray-hover) !important;
  }

  img {
    height: 1.25rem;
    filter: var(--icon-black);
  }

  .icon-left {
    margin-right: 0.625rem;
  }

  .icon-right {
    margin-left: 0.625rem;
  }
}

.option-selected {
  background-color: var(--background-orange);
  border: 0.0938rem solid var(--border-orange);

  &:active {
    background-color: var(--background-orange-hover) !important;
    border: 0.0938rem solid var(--border-orange) !important;
  }
}

/* ---------------------------------------------------
  TAB BOX
----------------------------------------------------- */

.tab-container {
  display: flex;

  .option-box {
    border-radius: 0rem;
  }

  .option-box:first-child {
    border-radius: var(--radius-base) 0rem 0rem var(--radius-base);
  }

  .option-box:last-child {
    border-radius: 0rem var(--radius-base) var(--radius-base) 0rem;
    border-right: 0.0938rem solid var(--border-gray);
  }
}

/* ---------------------------------------------------
  CHOICE BOX
----------------------------------------------------- */

.choice-box {
  width: 100%;
  border: 0.0938rem solid var(--border-gray);
  outline: none;
  border-radius: var(--radius-base);
  padding: 1.125rem;
  box-shadow: var(--shadow-small);
  background-color: var(--white);
  display: flex;
  align-items: center;
  gap: 0.9375rem;
  cursor: pointer;
  transition: all 0.2s ease-in-out;

  &:active {
    transform: scale(0.96);
    -webkit-transform: scale(0.96);
    -moz-transform: scale(0.96);
    border: 0.0938rem solid var(--border-gray-hover);
  }

  .round {
    height: 3.125rem;
    min-width: 3.125rem;
    background-color: var(--background-orange);
    border-radius: var(--radius-base);
    border: 1px solid var(--border-orange);
    display: flex;
    align-items: center;
    justify-content: center;

    img {
      height: 1.5625rem;
      filter: var(--icon-black);
    }
  }

  .choice-round {
    height: 1.25rem;
    width: 1.25rem;
    border: 0.0938rem solid var(--border-gray);
    border-radius: var(--radius-full);
    float: right;
  }

  .choice-content {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
  }
}

.choice-box-selected {
  border: 0.0938rem solid var(--border-orange);

  .choice-round {
    border-color: var(--orange);
    padding: 0.0938rem;

    div {
      background-color: var(--orange);
      height: 100%;
      width: 100%;
      border-radius: var(--radius-full);
    }
  }

  &:active {
    background-color: var(--background-orange-hover) !important;
    border-color: var(--border-orange) !important;
  }
}


/* ---------------------------------------------------
  TOAST
----------------------------------------------------- */

.toast {
  background-color: var(--background-green);
  color: var(--light-black);
  border-radius: var(--radius-base);
  border: 0.0938rem solid var(--border-green);
  bottom: 0px !important;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: flex;
  gap: 0.75rem;
  padding: 1rem;
  align-items: center;

  img {
    filter: var(--icon-green);
    height: 1.5625rem;
  }
}

